--- a/test/scss/_mixins.test.scss
+++ b/test/scss/_mixins.test.scss
@@ -57,7 +57,7 @@
 		@include oFonts($opts: (
 			'recommended': true,
 			'financier-display': (
-				(weight: regular, style: normal) 
+				(weight: regular, style: normal)
 			)
 		));
 
@@ -92,22 +92,26 @@
 		@include assert-equal(
 			$_o-fonts-families-included,
 			(
-				'MetricWeb-thin-normal': true,
-				'MetricWeb-light-normal': true,
-				'MetricWeb-light-italic': true,
-				'MetricWeb-regular-normal': true,
-				'MetricWeb-regular-italic': true,
-				'MetricWeb-medium-normal': true,
-				'MetricWeb-semibold-normal': true,
-				'MetricWeb-bold-normal': true,
-				'MetricWeb-bold-italic': true,
-				'FinancierDisplayWeb-light-italic': true,
-				'FinancierDisplayWeb-regular-normal': true,
-				'FinancierDisplayWeb-regular-italic': true,
-				'FinancierDisplayWeb-medium-italic': true,
-				'FinancierDisplayWeb-medium-normal': true,
-				'FinancierDisplayWeb-semibold-italic': true,
-				'FinancierDisplayWeb-bold-normal': true
+				'MetricWeb': (
+					'MetricWeb-thin-normal',
+					'MetricWeb-light-normal',
+					'MetricWeb-light-italic',
+					'MetricWeb-regular-normal',
+					'MetricWeb-regular-italic',
+					'MetricWeb-medium-normal',
+					'MetricWeb-semibold-normal',
+					'MetricWeb-bold-normal',
+					'MetricWeb-bold-italic'
+				),
+				'FinancierDisplayWeb': (
+					'FinancierDisplayWeb-light-italic',
+					'FinancierDisplayWeb-regular-normal',
+					'FinancierDisplayWeb-regular-italic',
+					'FinancierDisplayWeb-medium-italic',
+					'FinancierDisplayWeb-medium-normal',
+					'FinancierDisplayWeb-semibold-italic',
+					'FinancierDisplayWeb-bold-normal'
+				)
 			)
 		);
 		$_o-fonts-families-included: $original-o-fonts-families-included !global;
@@ -124,10 +128,14 @@
 		@include assert-equal(
 			$_o-fonts-families-included,
 			(
-				'MetricWeb-regular-normal': true,
-				'MetricWeb-semibold-normal': true,
-				'FinancierDisplayWeb-medium-normal': true,
-				'FinancierDisplayWeb-bold-normal': true
+				'MetricWeb': (
+					'MetricWeb-regular-normal',
+					'MetricWeb-semibold-normal'
+				),
+				'FinancierDisplayWeb': (
+					'FinancierDisplayWeb-medium-normal',
+					'FinancierDisplayWeb-bold-normal'
+				)
 			)
 		);
 		$_o-fonts-families-included: $original-o-fonts-families-included !global;
@@ -138,7 +146,7 @@
 		@include oFontsVariantsIncluded($opts: (
 			'recommended': true,
 			'financier-display': (
-				(weight: regular, style: normal) 
+				(weight: regular, style: normal)
 			)
 		));
 
@@ -149,11 +157,15 @@
 		@include assert-equal(
 			$_o-fonts-families-included,
 			(
-				'MetricWeb-regular-normal': true,
-				'MetricWeb-semibold-normal': true,
-				'FinancierDisplayWeb-medium-normal': true,
-				'FinancierDisplayWeb-bold-normal': true,
-				'FinancierDisplayWeb-regular-normal': true
+				'MetricWeb': (
+					'MetricWeb-regular-normal',
+					'MetricWeb-semibold-normal'
+				),
+				'FinancierDisplayWeb': (
+					'FinancierDisplayWeb-medium-normal',
+					'FinancierDisplayWeb-bold-normal',
+					'FinancierDisplayWeb-regular-normal'
+				)
 			)
 		);
 		$_o-fonts-families-included: $original-o-fonts-families-included !global;
@@ -183,7 +195,7 @@
 		// The custom font faces are recorded.
 		@include assert-equal(
 			$_o-fonts-families,
-			("MyFont": ("font-family": "MyFont, sans", "variants": ((weight: regular, style: normal), (weight: bold, style: normal)), "custom": true), MetricWeb: (font-family: "MetricWeb, sans-serif", variants: ((weight: thin, style: normal), (weight: light, style: normal), (weight: light, style: italic), (weight: regular, style: normal), (weight: regular, style: italic), (weight: medium, style: normal), (weight: semibold, style: normal), (weight: bold, style: normal), (weight: bold, style: italic))), FinancierDisplayWeb: (font-family: "FinancierDisplayWeb, serif", variants: ((weight: light, style: italic), (weight: regular, style: normal), (weight: regular, style: italic), (weight: medium, style: italic), (weight: medium, style: normal), (weight: semibold, style: italic), (weight: bold, style: normal))))
+			("MyFont": ("font-family": "MyFont, sans", "variants": ((weight: regular, style: normal), (weight: bold, style: normal)), "keys": ("MyFont"), "custom": true), MetricWeb: (font-family: "MetricWeb, sans-serif", keys: ("MetricWeb"), variants: ((weight: thin, style: normal), (weight: light, style: normal), (weight: light, style: italic), (weight: regular, style: normal), (weight: regular, style: italic), (weight: medium, style: normal), (weight: semibold, style: normal), (weight: bold, style: normal), (weight: bold, style: italic))), FinancierDisplayWeb: (font-family: "FinancierDisplayWebVF, FinancierDisplayWeb, serif", keys: ("FinancierDisplayWebVF", "FinancierDisplayWeb"), variants: ((weight: light, style: italic), (weight: regular, style: normal), (weight: regular, style: italic), (weight: medium, style: italic), (weight: medium, style: normal), (weight: semibold, style: italic), (weight: bold, style: normal)), variation-settings: ('wght': ('max': 800, 'min': 300),'ital': true)))
 		);
 	}
 }
